# Parcel

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json
.github/: FUNDING.yml
src/: filesystem.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  logging.rs  main.rs
ui/: app.js  index.html  styles.css
