[package]
name = "parcel-lib"
version = "1.0.0"
authors = ["Parcel Contributors", "Original: Kampfkarren"]
edition = "2021"
description = "Core library for converting Roblox place files to Rojo project structure"
license = "MPL-2.0"
repository = ""

[lib]
name = "parcel_lib"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4"
log = "0.4"
rbx_binary = { git = "https://github.com/rojo-rbx/rbx-dom/", branch = "master" }
rbx_dom_weak = { git = "https://github.com/rojo-rbx/rbx-dom/", branch = "master" }
rbx_reflection = "3"
rbx_xml = { git = "https://github.com/rojo-rbx/rbx-dom/", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
members = ["src-tauri"]
