[package]
name = "parcel"
version = "1.0.0"
description = "Convert Roblox place files to Rojo project structure"
authors = ["Parcel Contributors"]
license = "MPL-2.0"
repository = ""
edition = "2021"

[lib]
name = "parcel_lib"
path = "../src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
lazy_static = "1.4"
rbx_binary = { git = "https://github.com/rojo-rbx/rbx-dom/", branch = "master" }
rbx_dom_weak = { git = "https://github.com/rojo-rbx/rbx-dom/", branch = "master" }
rbx_reflection = "3"
rbx_xml = { git = "https://github.com/rojo-rbx/rbx-dom/", branch = "master" }
tokio = { version = "1", features = ["sync"] }
once_cell = "1.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
